# jcampos_embedded_2016

./: README.md
assignment_1/memcheck_tool/lib/: Makefile.am  libmemcheck.c
assignment_1/valgrind/: leak.txt  log.txt
memcheck_tool/: Makefile.am  configure.ac
memcheck_tool/src/: Makefile.am  memcheck.c
valgrind/: valgrind.txt
